<resources>
    <string name="app_name">PunchApp</string>
    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="psw">Contraseña</string>
    <string name="ConfPsw">Confirmar contraseña</string>
    <string name="cost">Costo</string>
    <string name="title">Título</string>
    <string name="loginText">Inicia sesión en tu cuenta</string>
    <string name="logIn">Iniciar sesión</string>
    <string name="LogInGoogle">Continuar con Google</string>
    <string name="SignUp">Crear cuenta</string>
    <string name="alreadyAccount">¿Ya tienes una cuenta?</string>
    <string name="or">O</string>
    <string name="rewards">Recompensas</string>
    <string name="Redeem">Canjear</string>
    <string name="history">Historial</string>
    <string name="points">Puntos</string>
    <string name="availableRewards">Puntos para recompensas disponibles:</string>
    <string name="notAccount">¿No tiene una cuenta?</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="description">Descripción</string>
    <string name="benefit">Beneficio</string>
    <string name="addReward">Agregar Recompensa</string>
    <string name="createReward">Crear Recompensa</string>
</resources>